fixed white margins and navbar text alignment

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,8 +6,8 @@
 
 .homeImage {
   height: 100vh;
-  width: 100vw;
-  min-height: 100%;
+  width: 100%;
+  min-height: 100vh;
   background: url(./logo.png) no-repeat center center fixed;
   background-size: cover;
   background-repeat: no-repeat;
@@ -23,7 +23,7 @@
 
 .headerSlogan {
   color: #d59f59;
-  text-align: left !important;
+  width: 30%;
 }
 
 .profilePageTag {
@@ -40,6 +40,15 @@
   border-radius: 5px !important;
   padding: 5px;
   width: 163px;
+}
+
+.navBarButtons {
+  width: 30%;
+}
+
+.navBarButtons li {
+  display: inline;
+  text-align: right;
 }
 
 .profileDescriptionTag {
@@ -159,13 +168,13 @@
 
 header {
     top: 0;
-    width: 100vw;
+    width: 100%;
     height: 8vh;
     background-color: #3f7f77;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: end;
-    float: right;
+    /* justify-content: end; */
 }
 
 .mixEasy {
